# yggdrasil

./: .env.example  Dockerfile  README.md  compose.yaml  dagster.yaml  dg.toml  docker_compose_logs.txt  main.py  pyproject.toml  workspace.yaml
ip_analytics/: pyproject.toml
ip_analytics/src/ip_analytics/: definitions.py
projects/ip_analytics/: Dockerfile  pyproject.toml
projects/ip_analytics/src/ip_analytics/defs/assets/: market_data.py  test_asset.py
projects/portfolio-analytics/: pyproject.toml
projects/portfolio-analytics/src/portfolio_analytics/: definitions.py
projects/trade-execution/: pyproject.toml
projects/trade-execution/src/trade_execution/: definitions.py
