[project]
name = "yggdrasil"
version = "0.1.0"
author = [
    { name = "MD", email = "derstine.michael@gmail.com" }
]
description = "Dagster workspace managing financial analytics platform.  Prototype for lightweight, scalable execution of financial models and trading."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.10.17",
    "dagster-docker>=0.26.17",
    "dagster-graphql>=1.10.17",
    "dagster-postgres>=0.26.17",
    "dagster-webserver>=1.10.17",
]
