[project]
name = "trade_execution"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster",
]

[project.entry-points]
"dagster_dg.plugin" = { trade_execution = "trade_execution.lib"}

[dependency-groups]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "trade_execution"


[tool.dg.project.python_environment]
active = true
